# AI-step-by-step

./: .gitignore  README.md  ai_agents_complete_guide.ipynb  ai_agents_foundations_guide.ipynb  chunking_complete_guide.ipynb  complete_dsa_guide.ipynb  complete_ml_guide.ipynb  context_engineering_complete_guide.ipynb  data_cleaning_complete_guide.ipynb  data_cleaning_learning.ipynb  data_science_complete_guide.ipynb  data_wrangling_learning.ipynb  dsa_all_topics_detailed.ipynb  dsa_complete_guide.ipynb  dsa_comprehensive_learning.ipynb  dsa_learning.ipynb  eda_learning.ipynb  embeddings_complete_guide.ipynb  hadoop_pyspark_complete_guide.ipynb  javascript_learning.ipynb  mcp_complete_guide.ipynb  ml_all_models_detailed_guide.ipynb  ml_all_models_guide.ipynb  nlp_complete_guide.ipynb  pyproject.toml  python_complete_guide.ipynb  pytorch_complete_guide.ipynb  rag_complete_guide.ipynb  requirements.txt  sentiment_analysis.py  text_summarization.py  tokenization_complete_guide.ipynb  typescript_learning.ipynb
capture/: penjelasan gambar + default HF model.md
