[tool.poetry]
name = "AI_step_by_step"
version = "0.1.0"
description = "AI step by step learning project with sentiment analysis and text summarization"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"

# Note: Install these packages using pip due to Windows build issues:
# poetry run pip install --only-binary :all: numpy transformers torch
# numpy = ">=2.0.0"
# transformers = ">=4.30.0"  
# torch = ">=2.0.0"

[tool.poetry.group.dev.dependencies]

# Note: Install dev packages using pip:
# poetry run pip install pytest black flake8 mypy
# pytest = "^7.0.0"
# black = "^23.0.0"
# flake8 = "^6.0.0"
# mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
